--- a/html/day_version/text.html
+++ b/html/day_version/text.html
@@ -10,11 +10,16 @@
 
 </head>
 <body>
+
+
+    
     <div id="MYSIDE" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">HOME</a>
-        <a href="studio.html">STUDIO</a>
-        <a href="text.html">TEXT</a>
+        <a href="index.html">Home</a>
+        <a href="studio.html">Studio</a>
+        <a href="text.html">Text</a>
+        <a href="about.html">About</a>
+
       </div>
       <button class="openbtn" onclick="openNav()">&#9776;</button>
 
