--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -21,9 +21,11 @@
 
     <div id="MYSIDE" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">HOME</a>
-        <a href="studio.html">STUDIO</a>
-        <a href="text.html">TEXT</a>
+        <a href="index.html">Home</a>
+        <a href="studio.html">Studio</a>
+        <a href="text.html">Text</a>
+        <a href="about.html">About</a>
+
       </div>
       <button class="openbtn" onclick="openNav()">&#9776;</button>
 
@@ -36,11 +38,27 @@
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
     intent="WELCOME"
-    chat-title="Chat with Us"
+    chat-title="do you think you are real?"
     agent-id="767d142e-d060-4447-93ef-c3d1f901571c"
     language-code="en"
+    chat-icon="https://i.ibb.co/47ty1j2/glitch.png"
+
     
-></df-messenger>
+></df-messenger> 
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const dfMessenger = document.querySelector('df-messenger');
+      dfMessenger.addEventListener('df-messenger-loaded', function () {
+        const inputField = dfMessenger.shadowRoot.querySelector("df-messenger-chat").shadowRoot.querySelector("df-messenger-user-input").shadowRoot.querySelector("input[type=text]");
+        if (inputField) {
+          inputField.placeholder = "Type yourself here...";
+        }
+      });
+    });
+  </script>
+  
 
 
 </body>
