--- a/html/day_version/studio.html
+++ b/html/day_version/studio.html
@@ -45,9 +45,11 @@
 
   <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="index.html">HOME</a>
-      <a href="studio.html">STUDIO</a>
-      <a href="text.html">TEXT</a>
+      <a href="index.html">Home</a>
+        <a href="studio.html">Studio</a>
+        <a href="text.html">Text</a>
+        <a href="about.html">About</a>
+
    
 
 
