--- a/html/day_version/about.html
+++ b/html/day_version/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <meta name="description" content="Discover the story behind 'DO YOU THINK YOU ARE REAL', philosophy, and what drives exploration of reality and perception.">
+    <title>About Us - DO YOU THINK YOU ARE REAL</title>
     <link rel="stylesheet" href="css/about.css">
-</head>
 <body>
     <canvas id="canvas1"></canvas>
     <script src="js/about.js"></script>
