--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -1,22 +1,22 @@
 <!-- بسم الله الرحمن الرحيم -->
 <!DOCTYPE html>
 
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://doyouthinkyouarereal.com" />
-    <meta property="og:title" content="what is real?" />
-    <meta property="og:description" content="Explore illusions, question perception, and ponder the essence of existence in a concise journey of curiosity" />
-    <link rel="stylesheet" href="/css/index.css" type="text/css" charset="utf-8" />
-    <title>DO YOU THINK YOU ARE REAL</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
-
-</head>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Delve into the mysteries of reality and perception with interactive explorations.">
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://doyouthinkyouarereal.com" />
+        <meta property="og:title" content="what is real?" />
+        <meta property="og:description" content="Explore illusions, question perception, and ponder the essence of existence in a concise journey of curiosity" />
+        <link rel="stylesheet" href="/css/index.css" type="text/css" charset="utf-8" />
+        <title>DO YOU THINK YOU ARE REAL</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
+    </head>
+    
 <body>
 
     <div id="MYSIDE" class="sidenav">
