--- a/html/day_version/studio.html
+++ b/html/day_version/studio.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Studio</title> <!-- Ensure the title is descriptive -->
+  <meta name="description" content="captivating and artistic imagery."> <!-- Meta Description -->
+  
+  <!-- Other SEO Meta Tags -->
+  <meta property="og:title" content="Studio - Photo Gallery">
+  <meta property="og:description" content=" captivating and artistic imagery.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://doyouthinkyouarereal.com/studio.html"> <!-- Replace with your actual URL -->
+  <meta property="og:image" content="http://doyouthinkyouarereal.com/images/og-image.jpg"> <!-- Replace with a link to an image representing the page -->
   <link rel="stylesheet" href="/css/photo.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
