--- a/html/day_version/text.html
+++ b/html/day_version/text.html
@@ -2,6 +2,15 @@
 <html>
 <head>
     <head>
+        <meta name="description" content="Explore in-depth articles, analyses, and insights on various topics. Dive into our comprehensive text resources for a unique perspective.">
+    
+        <!-- SEO Meta Tags -->
+        <meta property="og:title" content="Text Insights - Your Website Name">
+        <meta property="og:description" content="Explore in-depth articles, analyses, and insights on various topics. Dive into our comprehensive text resources for a unique perspective.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="http://doyouthinkyouarereal.com/text.html"> <!-- Replace with your actual URL -->
+        <meta property="og:image" content="http://www.yourwebsite.com/images/og-image-text.jpg"> <!-- Replace with a link to an image representing the page -->
+    
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/text.css" type="text/css" charset="utf-8" />
         <meta charset="UTF-8">
