--- a/html/night_version/index.html
+++ b/html/night_version/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
         <script type="text/javascript" src="html2canvas.js"></script>
@@ -7,6 +8,17 @@
         <script type="text/javascript" src="glitch-execute.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Opening Hours</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Delve into the mysteries of reality and perception with interactive explorations.">
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://doyouthinkyouarereal.com" />
+        <meta property="og:title" content="what is real?" />
+        <meta property="og:description" content="Explore illusions, question perception, and ponder the essence of existence in a concise journey of curiosity" />
+        <link rel="stylesheet" href="/css/index.css" type="text/css" charset="utf-8" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
     </head>
     <body>
 
