--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -19,6 +19,18 @@
     
 <body>
 
+   
+    <div id="github-icon">
+
+  <a href="spotify.html" target="_blank">
+    <img src="https://i.ibb.co/pKR2Pxn/spotify-logo-png-7078.png" alt="GitHub" style="position: fixed; bottom: 20px; right: 85px; width: 55px; height: 55px; border-radius: 50px; background-color: rgb(255, 255, 255);">
+</a>
+<a href="https://github.com/bebarz" target="_blank">
+  <img src="https://i.ibb.co/ZVqXMpn/iconmonstr-github-1-240.png" alt="GitHub" style="position: fixed; bottom: 20px; right: 150px; width: 55px; height: 55px; border-radius: 50px; background-color: rgb(255, 255, 255);">
+</a>
+</div>
+
+
     <div id="MYSIDE" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
