--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -20,7 +20,7 @@
 <body>
 
    
-    <div id="github-icon">
+ <!--    <div id="github-icon">
 
   <a href="spotify.html" target="_blank">
     <img src="https://i.ibb.co/pKR2Pxn/spotify-logo-png-7078.png" alt="GitHub" style="position: fixed; bottom: 20px; right: 85px; width: 55px; height: 55px; border-radius: 50px; background-color: rgb(255, 255, 255);">
@@ -28,7 +28,7 @@
 <a href="https://github.com/bebarz" target="_blank">
   <img src="https://i.ibb.co/ZVqXMpn/iconmonstr-github-1-240.png" alt="GitHub" style="position: fixed; bottom: 20px; right: 150px; width: 55px; height: 55px; border-radius: 50px; background-color: rgb(255, 255, 255);">
 </a>
-</div>
+</div>-->
 
 
     <div id="MYSIDE" class="sidenav">
