--- a/html/night_version/index.html
+++ b/html/night_version/index.html
@@ -79,5 +79,16 @@ body {  margin: 0;
                 gl.start(document.body);
             }
         </script>
+
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QGHCZYMLP2">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QGHCZYMLP2');
+</script>
     </body>
 </html>
