--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -72,7 +72,16 @@
     });
   </script>
   
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QGHCZYMLP2">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-QGHCZYMLP2');
+</script>
 
 </body>
 </html>
