--- a/html/night_version/index.html
+++ b/html/night_version/index.html
@@ -17,6 +17,15 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QGHCZYMLP2">
+        </script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-QGHCZYMLP2');
+        </script>
     </head>
     <body>
 
@@ -83,12 +92,6 @@ body {  margin: 0;
         <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QGHCZYMLP2">
 </script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-QGHCZYMLP2');
-</script>
     </body>
 </html>
