--- a/html/night_version/index.html
+++ b/html/night_version/index.html
@@ -78,7 +78,11 @@ body {  margin: 0;
     <div class="opening-hours">
         <h1>Opening Hours (UTC+1)</h1>
         <p><strong>Monday - Friday:</strong> 8:00 - 20:00</p>
-        <p>come back later or try, <a href="game/shit.html">get your shit together</a>.</p>
+        <p>come back later or try<br>
+        <a href="how-often-you-think-of/details.html">get your shit together</a></p>
+        <a href="void.html">call the void</a></p>
+
+
 
     </div> 
 
