--- a/html/night_version/void.html
+++ b/html/night_version/void.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sound Icon Example</title>
+    <title>call the void</title>
     <meta name="description" content="Example page with a sound icon for calling. Click on the icon to initiate a call.">
     <meta name="keywords" content="sound icon, call icon, HTML example, audio element">
     <meta name="author" content="Your Name">
