--- a/html/night_version/index.html
+++ b/html/night_version/index.html
@@ -78,10 +78,10 @@ body {  margin: 0;
     <div id="page">
     <div class="opening-hours">
         <h1>Opening Hours (UTC+1)</h1>
-        <p><strong>Monday - Friday:</strong> 8:00 - 20:00</p>
+        <p><strong>ALL DAYS:</strong> 16:00 - 8:00</p>
         <p>come back later or try<br>
         <a href="how-often-you-think-of/details.html">get your shit together</a></p>
-        <a href="void.html">call the void</a></p>
+  
 
 
 
