--- a/html/day_version/404.html
+++ b/html/day_version/404.html
@@ -1,46 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
-    <style>
-        /* Add your CSS styles here to customize the appearance of the 404 page */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            text-align: center;
-            padding: 50px;
-        }
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-        h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
-            color: #a34d4d; /* Customize the color */
-        }
-        p {
-            font-size: 18px;
-            color: #333;
-        }
-        .footer {
-            margin-top: 20px;
-            font-size: 16px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lost in the Starry Maze!</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #1b1b1b; /* Dark Background for a starry feel */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      color: #fff; /* White text for readability */
+    }
+
+    .container {
+      background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+      padding: 3rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2); /* White glow for the container */
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.5;
+      margin-bottom: 2rem;
+    }
+
+    .constellations {
+      display: flex;
+      justify-content: space-around;
+      width: 50%;
+      margin: 0 auto;
+    }
+
+    .constellations img {
+      width: 150px;
+      height: auto;
+      cursor: pointer;
+      opacity: 0.7; /* Semi-transparent constellations initially */
+      transition: opacity 0.3s ease-in-out; /* Smooth opacity change on hover */
+    }
+
+    .constellations img:hover {
+      opacity: 1; /* Full opacity on hover */
+    }
+
+    #message {
+      font-weight: bold;
+      margin-top: 1rem;
+      display: none;
+      color: #f0f8ff; /* Light blue for the message */
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #fff; /* White text for navigation links */
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #f0f8ff; /* Light blue color on hover */
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>404 - Page Not Found</h1>
-        <p>Oops! The page you are looking for doesn't exist.</p>
-        <p>Sorry for the inconvenience.</p>
-        <div class="footer">
-            <p>Return to <a href="/">Homepage</a></p>
-        </div>
+  <div class="container">
+    <h1>Uh Oh! Lost in the Starry Maze!</h1>
+    <p>The page you seek is voided.
+    Click on link below to return to origin.</p>
+    <p><a href="/">HOMEPAGE</a></p>
+    <div class="constellations">
+ 
     </div>
-</body>
-</html>
+    <p id="message"></p>
+    <nav>
+
+ 
+  
