--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -15,7 +15,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
-       <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QGHCZYMLP2">
 </script>
 <script>
@@ -46,7 +45,7 @@
         <a href="index.html">Home</a>
         <a href="studio.html">Studio</a>
         <a href="text.html">Text</a>
-        <a href="about.html">About</a>
+  
 
       </div>
       <button class="openbtn" onclick="openNav()">&#9776;</button>
@@ -57,7 +56,7 @@
 
 </script>
 
-<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<!-- <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
     intent="WELCOME"
     chat-title="do you think you are real?"
@@ -67,7 +66,7 @@
 
 
     
-></df-messenger> 
+></df-messenger>  -->
 
 
 <script>
@@ -82,8 +81,5 @@
     });
   </script>
   
-<!-- Google tag (gtag.js) -->
-
-
 </body>
 </html>
