--- a/html/day_version/studio.html
+++ b/html/day_version/studio.html
@@ -18,22 +18,22 @@
 
   
   <div class="gallery">
-    <img src="/images/1s.webp" alt="A serene aerial twilight view with gradient skies above and a darkened landscape below " onclick="openImage('/images/1.jpg')">-
-    <img src="/images/21s.webp" alt="A complex, abstract tapestry of monochrome urban textures and forms blending into each other " onclick="openImage('/images/21.png')">
-    <img src="/images/2s.webp" alt="Dynamic swirls of blue and white evoke the tumultuous beauty of a marbled ocean storm " onclick="openImage('/images/2.jpg')">
-    <img src="/images/3s.webp" alt="An ethereal, celestial body resembling an eye, nebulous and enigmatic, peers through a cloudy abyss. " onclick="openImage('/images/3.jpg')">
-    <img src="/images/4s.webp" alt="A mesmerizing pattern of light and dark vertical stripes creating an optical illusion of undulating waves " onclick="openImage('/images/4.jpg')">
-    <img src="/images/5s.webp" alt="Stark silhouettes of two people are set against a backdrop of a halftone pattern, creating a sense of anonymity and intrigue. " onclick="openImage('/images/5.jpg')">
-    <img src="/images/6s.webp" alt="A mountain landscape dramatically altered into a surreal swirl, blending geological textures in a dreamlike composition " onclick="openImage('/images/6.jpg')">
-    <img src="/images/9s.webp" alt="nocturnal street scene bathed in the warm glow of streetlights, casting long shadows and a sense of quiet solitude " onclick="openImage('/images/9.jpg')">
-    <img src="/images/11s.webp" alt="An intricate ink drawing of a hypnotic vortex, creating a striking contrast between the swirling darkness and the blank space around it " onclick="openImage('/images/11.jpg')">
-    <img src="/images/12s.webp" alt="A digital canvas displaying a glitched, abstract swirl of colors with horizontal striations disrupting the image continuity " onclick="openImage('/images/12.jpg')">
-    <img src="/images/13s.webp" alt=" A digital disruption, this image shows a cascade of monochromatic pixels and lines in a chaotic, glitch-art style " onclick="openImage('/images/13.jpg')">
-    <img src="/images/14s.webp" alt="Artistic juxtaposition of a colorful abstract figure fragmented by bold black lines against a grayscale architectural backdrop, suggesting digital collage techniques. " onclick="openImage('/images/14.jpg')">
-    <img src="/images/16s.webp" alt="A solitary figure stands illuminated atop a hill, overlooking a sea of people shrouded in darkness under a brooding sky. " onclick="openImage('/images/16.jpg')">
-    <img src="/images/17s.webp" alt="A stylized depiction of two women, represented as an array of contrasting dots in a halftone pattern, creating a nuanced interplay of light and shadow " onclick="openImage('/images/17.jpg')">
-    <img src="/images/18s.webp" alt="A vibrant digital portrait of a woman, her form and features fragmented by a tapestry of colorful static and television-like scan lines " onclick="openImage('/images/18.jpg')">
-    <img src="/images/19s.webp" alt="An intense red eye surrounded by a vortex of white lines stands out against a stark black background, exuding a sense of surveillance and focus" onclick="openImage('/images/19.jpg')">
+    <img src="/images/1s.png" alt="A serene aerial twilight view with gradient skies above and a darkened landscape below " onclick="openImage('/images/1.jpg')">-
+    <img src="/images/21s.png" alt="A complex, abstract tapestry of monochrome urban textures and forms blending into each other " onclick="openImage('/images/21.png')">
+    <img src="/images/2s.png" alt="Dynamic swirls of blue and white evoke the tumultuous beauty of a marbled ocean storm " onclick="openImage('/images/2.jpg')">
+    <img src="/images/3s.png" alt="An ethereal, celestial body resembling an eye, nebulous and enigmatic, peers through a cloudy abyss. " onclick="openImage('/images/3.jpg')">
+    <img src="/images/4s.png" alt="A mesmerizing pattern of light and dark vertical stripes creating an optical illusion of undulating waves " onclick="openImage('/images/4.jpg')">
+    <img src="/images/5s.png" alt="Stark silhouettes of two people are set against a backdrop of a halftone pattern, creating a sense of anonymity and intrigue. " onclick="openImage('/images/5.jpg')">
+    <img src="/images/6s.png" alt="A mountain landscape dramatically altered into a surreal swirl, blending geological textures in a dreamlike composition " onclick="openImage('/images/6.jpg')">
+    <img src="/images/9s.png" alt="nocturnal street scene bathed in the warm glow of streetlights, casting long shadows and a sense of quiet solitude " onclick="openImage('/images/9.jpg')">
+    <img src="/images/11s.png" alt="An intricate ink drawing of a hypnotic vortex, creating a striking contrast between the swirling darkness and the blank space around it " onclick="openImage('/images/11.jpg')">
+    <img src="/images/12s.png" alt="A digital canvas displaying a glitched, abstract swirl of colors with horizontal striations disrupting the image continuity " onclick="openImage('/images/12.jpg')">
+    <img src="/images/13s.png" alt=" A digital disruption, this image shows a cascade of monochromatic pixels and lines in a chaotic, glitch-art style " onclick="openImage('/images/13.jpg')">
+    <img src="/images/14s.png" alt="Artistic juxtaposition of a colorful abstract figure fragmented by bold black lines against a grayscale architectural backdrop, suggesting digital collage techniques. " onclick="openImage('/images/14.jpg')">
+    <img src="/images/16s.png" alt="A solitary figure stands illuminated atop a hill, overlooking a sea of people shrouded in darkness under a brooding sky. " onclick="openImage('/images/16.jpg')">
+    <img src="/images/17s.png" alt="A stylized depiction of two women, represented as an array of contrasting dots in a halftone pattern, creating a nuanced interplay of light and shadow " onclick="openImage('/images/17.jpg')">
+    <img src="/images/18s.png" alt="A vibrant digital portrait of a woman, her form and features fragmented by a tapestry of colorful static and television-like scan lines " onclick="openImage('/images/18.jpg')">
+    <img src="/images/19s.png" alt="An intense red eye surrounded by a vortex of white lines stands out against a stark black background, exuding a sense of surveillance and focus" onclick="openImage('/images/19.jpg')">
 
     
   </div> 
